<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.webesdi.MenuPrincipal">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="202dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@android:style/TextAppearance.Widget" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Titulo" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/txtEmail"
        android:layout_toEndOf="@+id/txtEmail"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/btnpaginaweb"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:text="@string/menuP_web" />

        <Button
            android:id="@+id/btnTutoriales"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:text="@string/menuP_tutoriales" />

        <Button
            android:id="@+id/btnContacto"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:text="@string/menuP_contacto" />

        <Button
            android:id="@+id/btndispoAulas"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:text="@string/menuP_aulas" />

        <Button
            android:id="@+id/btnMensajes"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:text="@string/menuP_mensajes" />

        <Button
            android:id="@+id/btnIncidencias"
            android:layout_gravity="fill"
            android:layout_rowSpan="2"
            android:text="@string/menuP_incidencias" />


    </GridLayout>

</RelativeLayout>
