<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.webesdi.Contacto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TienesDudas"
            android:layout_width="174dp"
            android:layout_height="21dp"
            android:gravity="center"
            android:text="@string/contacto_subtitulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="118dp" />

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="227dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/contacto_titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="14dp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="335dp"
            android:layout_height="316dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintLeft_toLeftOf="@+id/numero"
            app:layout_constraintRight_toRightOf="@+id/btnChat" />

        <ImageView
            android:id="@+id/btnChat"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:onClick="lanzarMensajes"
            app:srcCompat="@drawable/chat"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TienesDudas" />

        <TextView
            android:id="@+id/email"
            android:layout_width="65dp"
            android:layout_height="31dp"
            android:layout_weight="0.29"
            android:gravity=""
            android:text="@string/contacto_correo"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCorreo"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/btnCorreo"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/btnCorreo" />

        <ImageView
            android:id="@+id/btnCorreo"
            android:layout_width="95dp"
            android:layout_height="37dp"
            android:layout_weight="0.30"
            app:srcCompat="@drawable/arroba"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TienesDudas" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="65dp"
            android:layout_height="31dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2.17"
            android:gravity=""
            android:text="@string/contacto_consultas"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@+id/btnChat"
            app:layout_constraintRight_toRightOf="@+id/btnChat"
            app:layout_constraintTop_toBottomOf="@+id/btnChat" />

        <TextView
            android:id="@+id/llamanos"
            android:layout_width="65dp"
            android:layout_height="31dp"
            android:layout_weight="2.07"
            android:gravity=""
            android:text="@string/contacto_telefono"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/numero"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/numero"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numero"
            app:layout_constraintHorizontal_bias="1.0" />

        <ImageView
            android:id="@+id/numero"
            android:layout_width="65dp"
            android:layout_height="37dp"
            android:layout_weight="0.88"
            app:srcCompat="@drawable/telefono"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TienesDudas" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
