<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:background="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_weight="0.39"
                android:background="@color/grey_100"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sign_out"
                android:textColor="@color/letrasgoogle"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:typeface="normal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="269dp"
            android:layout_height="251dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.506">

            <!-- android:src="@drawable/firebase_lockup_400" -->


            <ImageView
                android:id="@+id/google_icon"
                style="@style/ThemeOverlay.FirebaseIcon"
                android:layout_width="112dp"
                android:layout_height="116dp"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@mipmap/noulogoesdi" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:text="@string/google_title_text"
                android:theme="@style/ThemeOverlay.MyTitleText"
                android:layout_weight="0.13" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="409dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.26"
            android:background="@color/grey_300"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="-21dp"
            app:layout_constraintHorizontal_bias="0.555">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone">

            </com.google.android.gms.common.SignInButton>

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
