<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent" >

                <RelativeLayout android:id="@+id/tab1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/txtChat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/txtEmail"
                        android:layout_marginTop="22dp"
                        android:maxLines="25"
                        android:scrollbars="vertical" />

                    <EditText
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/inChat"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="133dp"
                        android:layout_width="wrap_content" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:id="@+id/imageButton"
                        android:layout_marginRight="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_alignBottom="@+id/inChat"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>

                <RelativeLayout android:id="@+id/tab2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtEmail2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/txtChat2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="25"
                        android:scrollbars="vertical"
                        android:layout_below="@+id/imageButton2"
                        android:layout_marginTop="21dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:id="@+id/imageButton2"
                        android:layout_below="@+id/inDescripcion"
                        android:layout_toRightOf="@+id/btnCancelar"
                        android:layout_toEndOf="@+id/btnCancelar" />

                    <EditText
                        android:id="@+id/inEquipo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/equipo"
                        android:layout_marginTop="15dp"
                        android:layout_below="@+id/txtEmail2"
                        android:layout_alignLeft="@+id/inTitulo"
                        android:layout_alignStart="@+id/inTitulo" />

                    <EditText
                        android:id="@+id/inTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/titulo"
                        android:layout_below="@+id/inEquipo"
                        android:layout_alignLeft="@+id/inDescripcion"
                        android:layout_alignStart="@+id/inDescripcion" />

                    <TextView
                        android:id="@+id/txtFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="fecha"
                        android:layout_marginLeft="25dp"
                        android:layout_marginStart="25dp"
                        android:layout_alignTop="@+id/inTitulo"
                        android:layout_alignLeft="@+id/btnScan"
                        android:layout_alignStart="@+id/btnScan" />

                    <Button
                        android:id="@+id/btnScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/escanear"
                        android:layout_alignBottom="@+id/inEquipo"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp" />

                    <EditText
                        android:id="@+id/inDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="13dp"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:text="@string/descripcion"
                        android:layout_below="@+id/inTitulo"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/btnScan"
                        android:layout_alignEnd="@+id/btnScan" />

                    <Button
                        android:id="@+id/btnNuevo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nuevo"
                        android:layout_alignTop="@+id/imageButton2"
                        android:layout_alignLeft="@+id/inDescripcion"
                        android:layout_alignStart="@+id/inDescripcion" />

                    <Button
                        android:id="@+id/btnCerrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finalizar"
                        android:layout_alignBaseline="@+id/btnNuevo"
                        android:layout_alignBottom="@+id/btnNuevo"
                        android:layout_toRightOf="@+id/btnNuevo"
                        android:layout_toEndOf="@+id/btnNuevo" />

                    <Button
                        android:id="@+id/btnCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:layout_alignBaseline="@+id/btnCerrar"
                        android:layout_alignBottom="@+id/btnCerrar"
                        android:layout_toRightOf="@+id/btnCerrar"
                        android:layout_toEndOf="@+id/btnCerrar" />

                    <ListView
                        android:id="@+id/lstIncidencias"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageButton2"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <RelativeLayout android:id="@+id/tab3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/txtEmail3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/txtChat3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/txtEmail3"
                        android:layout_marginTop="22dp"
                        android:maxLines="25"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/inChat3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="133dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/inChat3"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spCorreo"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="49dp"
                        android:spinnerMode="dialog" />
                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>
